--- a/tempelhof_temp_prediction_day_presented.ipynb
+++ b/tempelhof_temp_prediction_day_presented.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Time Series Analysis (Temperature Forcast Tepelhof): \n",
-    "In this project, you will create a short-term temperature forecast.\n",
+    "# Time Series Analysis (Temperature Forcast Tempelhof): \n",
+    "In this project, you analyse temperature time series from  Berlin Tempelhof and we create a short-term temperature forecast for Berlin Tempelhof.\n",
     "- Get and clean temperature data from www.ecad.eu\n",
     "- Build a baseline model for trend + Plot and inspect\n",
     "- Build a baseline model for seasonality + Plot and inspect\n",
@@ -13,7 +13,7 @@
     "- Model time dependence of the remainder using an AR model\n",
     "- Compare the statistical output of different AR models\n",
     "- Model Validation: Cross-Validation + Split train - test\n",
-    "- Predicting Temperature for tomorrow "
+    "- Predicting Temperature for the after. "
    ]
   },
   {
